# WI_Analysis

./: .gitignore  README.md  config.json  pyproject.toml
src/wi_analysis/: analyze.py  analyze_get_args.py  clean.py  clean_get_args.py  scrape.py  scrape_get_args.py
stats/: stats.json  stats_classes.csv  stats_classes_more.csv  stats_colors.csv  stats_levels.csv  stats_skills.csv  stats_unknown.csv
